--- a/03.equipment.md
+++ b/03.equipment.md
@@ -25,10 +25,13 @@ All equipment lists below do not mention tents, tables and chairs, as they are l
 
 - 2.5x2.5m light tents: 1 remaining (check condition)
 - 3x6m heavy OZtrail tent: 1 remaining, brocken
-- Dome tent
+- Dome tent (old Saturday tent): 1 remaining + walls
+- Tunnel Tent (as per Euro club type): 1 remaining
 - Iskhakovs' 3x6m heavy OZtrail tent: 1 remaining
 - Scowns' 3x3m heavy OZtrail tent: 1 remaining
-- ? small tables in the Shed
+- 1 large tables remaining
+
+> TODO: Two 2.5x2.5m tents are in repair, one is needed, ready in time?
 
 (equipment:arena)=
 ## General arena equipment
@@ -38,35 +41,44 @@ Right column indicates whether the item is required for the individual events
 
 | Item | From | Quantity | Usage |
 |-|-|:-:|:-:|
-| Tent walls | Shed | 12 Marquee, 3 Sat, 2 Dome | ☑ ☑ ☑ ☑ ☑ |
-| Tent weights | Shed | 4 shopping bags per tent<br/>to be filled with sand/rocks | ☑ ☑ ☑ ☑ ☑ |
+| Tent walls | Shed | 12 Marquee, 3 Sat | ☑ ☑ ☑ ☑ ☑ |
+| Tent weights | Shed | 4 shopping bags per tent = 24<br/>to be filled with sand/rocks | ☑ ☑ ☑ ☑ ☑ |
 | `OACT`,`Orienteering` banners | Shed | 4 ? | ☑ ☑ ☑ ☑ ☑ |
-| Toiletries | Shed | - | ◻︎ ☑ ◻︎ ◻︎ ☑ |
+| Toilet paper and hand sanitizer | Shed | - | ◻︎ ☑ ◻︎ ◻︎ ☑ |
 | Garbage bins+bags | Shed | 2 sets | ☑ ☑ ☑ ☑ ☑ |
 | Signage: tent signs | make | - | ☑ ☑ ☑ ☑ ☑ |
-| Signage: navigation | make | - | ☑ ☑ ☑ ☑ ☑ |
+| Signage: navigation + out-of-bounds | make | - | ☑ ☑ ☑ ☑ ☑ |
 | Signage: traffic alerts | Shed | `Runners on Road` 6+4<br/>`Caution` 2 | ☑ ☑ ☑ ☑ ☑ |
+| Mallet | Shed | 2 | ☑ ☑ ☑ ☑ ☑ |
 | Stakes for navigation sign | Shed | 6-8 | ☑ ☑ ☑ ☑ ☑ |
-| Water containers | Shed | 4 | ☑ ☑ ☑ ☑ ☑ |
+| Water containers | Shed | 12<br/>including for weighting<br/>tents down at SPRINT | ☑ ☑ ☑ ☑ ☑ |
 | First aid kit | Office | 1 | ☑ ☑ ☑ ☑ ☑ |
 | Defibrillator | Office | 1 | ☑ ☑ ☑ ☑ ☑ |
+| Satellite phone | Office | 1 | ☑ ☑ ☑ ☑ ☑ |
+| Emergency beacon EPIRB | Fedor | 1 | ☑ ☑ ☑ ☑ ☑ |
 | Press wall 2.4x3m | Arpad | 1 | ☑ ☑ ☑ ☑ ☑ |
 | Podium | ONSW | 1 | ◻︎ ☑ ◻︎ ◻︎ ☑ |
 | Crowd control barriers | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
 | Orienteering Australia banners | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
 
-> TODO: Use office A3 laminator and printer for making signage
+- Signage at OACT shed:
+  * Runners on Road (reflective) - 6
+  * Runners on Road - 3
+  * “Orienteering” direction - many ??
+  * “Arrow” direction - many ??
+  * Out-of-bounds - many ??
+
+> TODO: determine which signs are needed
+
+- Sattelite phone `0147140690` (black) `0147115569` (yellow)
 
 ### + dinner
 
 The following items have to make it to the dinner:
 - podium
 - press wall
-- 1 table for prizes (unless the venue has a table)
 - diplomas, certificates, medals, prizes
-
-> TODO: they do have audio/PA system?  
-> TODO: will there be a projector for photos?
+- computer to show photos, logos
 
 (equipment:it)=
 ## Central IT tent
@@ -95,20 +107,23 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 | SI: download unit | 2 | |
 | Power banks, OACT | 1 | |
 | Power banks, Fedor | 3 | |
-| Petrol generator, Honda | 1 | |
+| Petrol generator, Honda | 2 | Including backup generator from Raynie McNee |
 | Electric cables and powerboards | 5? | |
-| Sun hood(?) | ? | Laptop screens are next to impossible to see in the sun |
+| Wooden box/hood | 2 | To help with sub glare |
 
 ### + finish equipment
 
 | Item | Quantity | Comment |
 |-|:-:|-|
 | SI: finish station | 2 | |
-| Flag `Finish` | 2 | or arch? |
+| Flag `Finish` | 2 | |
 | Bunting | 50m | For finish corridors |
 | Pigtail stakes | 10 | For finish corridors |
 
-- OACT Shed have a foldable finish banner on stands
+- OACT Shed has a foldable finish banner on stands
+- Pigtail stakes at OACT Shed:
+  * 40 heavy orange
+  * 52 lightweight white
 
 ### + screens tent
 
@@ -224,7 +239,7 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 | Medium tables | 2 | Foldable medium tables |
 | Chairs | 2 | light + bring their own |
 | `Start` banners | 1+1 | One for each of two starts |
-| Map boxes | 7+4 ? | |
+| Map trays | 7+4 ? | |
 | Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
 | SI units for the start | 2 sets | To be provided by IT team |
 | Start clock | 4 | Two for each start ? |
@@ -232,6 +247,14 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 | Bunting | 50m | For start corridors |
 | Wash away paint | 1 can| As alternative for bunting |
 
+- Pigtail stakes at OACT Shed:
+  * 40 heavy orange
+  * 52 lightweight white
+  MAP TRAYS
+- Map trays at OACT Shed:
+  * 12 A3
+  * 20 A4+
+  * 3 A4
 
 ## Course setting gear
 
@@ -245,8 +268,16 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 | Control setters vest | 4 | Very useful for BS-11 units |
 | Battery powered drill | own | For setting controls in hard ground |
 
-- More stand to arrive as John and Ann arrange
-- More control flags are available from John and Ann if needed
+- Control flags at OACT Shed:
+  * Vavry flags: 130 in plastic box + 100 in cardboard box
+  * Silva flags: 63 in plastic box
+  * More control flags are available from John and Ann if needed
+
+- Control stands at OACT Shed:
+  * BSF7 plated – 143 (including 5 with narrow plates)
+  * BSF8 plated – 20
+  * Minus 9 stands in repair
+
 - Check out [strategies for placing controls in hard ground](setting:hard_ground)
 
 ## Parking team gear
