--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -14,10 +14,10 @@
 | Event | N of controls | Allocated numbers | Set | Comments |
 |-|:-:|-|-|-|
 | WARM-UP | 20 | 205-224 | ONSW | |
-| MASS | 40 | 71-109, 300 | OA, ONSW | + extra 190-203 and 205-224 ***check!*** |
-| MIDDLE | 40 | 31-70 | OACT, | |
-| SPRINT | 47 | 71-109, 190-197 | OA, ONSW | + extra 190-203 and 205-224 |
-| LONG | 40 | 31-70 | OACT | |
+| MASS | 38 | 71-88, 90-97, 99,<br/>101-111, 300 | OA, ONSW | 110,111 do not exist<br/>need to be reprogrammed<br/>from 301,302 |
+| MIDDLE | 39 | 31-68, 69 | OACT, | |
+| SPRINT | 44 | 71-86, 190-197,<br/>205-224 | OA, ONSW |  |
+| LONG | 27 | 31-57 | OACT | |
 
 (setting:hard_ground)=
 ## Putting control stands into the hard ground
