Controls logistics update

--- a/03.equipment.md
+++ b/03.equipment.md
@@ -256,8 +256,9 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
   * 20 A4+
   * 3 A4
 
-## Course setting gear
 
+(equipment:course-setting)=
+## Course setting gear
 
 | Item | Quantity | Comment |
 |-|:-:|-|
