--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -19,6 +19,54 @@
 | SPRINT | 44 | 71-86, 190-197,<br/>205-224 | OA, ONSW |  |
 | LONG | 27 | 31-57 | OACT | |
 
+(setting:logistics)=
+## Control stands, flags and SI unit logistics
+
+```{button-ref} equipment:course-setting
+:color: primary
+:shadow:
+
+All course-setting gear
+```
+
+**OACT has in operation:**
+- 293 control flags (*more that the total number of controls in the Carnival*)
+- 143 control stands with large baseplates (BSF7 and BS11BS)
+  * Plus BSF8 plated – 20
+  * Minus 9 stands in repair
+- 5 setters' vests + 2 belts to carry SI units
+
+> TODO: Check when the stands in repair are available
+
+**Logistic plan for control flags, stands and SI units:**
+
+- all SI units are set by Fedor before handing them out
+
+| Date | Time | From | Operation |
+|-|-|-|-|
+| *Wed, Oct 16* | morning | Shed | 38 stands + flags $\longrightarrow$ Cathy for MASS |
+| *Wed, Oct 16* | morning | Shed | 20 stands + flags $\longrightarrow$ Marina for WARMUP |
+| *Wed, Oct 16* | evening | FM garage | MASS units + vest $\longrightarrow$ Cathy |
+| *Thur, Oct 17* | early morning | FM garage | WARMUP units + vest $\longrightarrow$ Marina |
+| *Thur, Oct 17* | morning | Shed | 44 stands + flags $\longrightarrow$ Cath for SPRINT |
+| *Thur, Oct 17* | morning | Shed | ? Units 190-197 $\longrightarrow$ Cath for SPRINT |
+| *Thur, Oct 17* | morning | Shed | 39 stands + flags $\longrightarrow$ Michael for MIDDLE |
+| *Thur, Oct 17* | morning | Shed | MIDDLE units + vest $\longrightarrow$ Michael |
+| | | | 143 - (38+20+44+39) = 2 stands remain in the Shed<br/>But some may be in repair<br/>Plus meshO has about 10 stands |
+| *Thur, Oct 17* | evening | WARMUP | Units 205-224 $\longrightarrow$ Cath for SPRINT |
+| *Thur, Oct 17* | evening | WARMUP | 20 stands + flags $\longrightarrow$ Fedor for LONG |
+| *Thur, Oct 17* | evening | Shed, meshO | 2 stands + flags $\longrightarrow$ Fedor for LONG |
+| *Fri, Oct 18* | evening | MASS | Units 71-88 + vest $\longrightarrow$ Cath for SPRINT |
+| *Fri, Oct 18* | evening | MASS | 38 stands + flags $\longrightarrow$ FM garage |
+| *Sat, Oct 19* | afternoon | MIDDLE | 39 stands + flags $\longrightarrow$ FM garage |
+| *Sat, Oct 19* | afternoon | MIDDLE | MIDDLE units + vest $\longrightarrow$ FM garage |
+| *Sat, Oct 19* | evening | SPRINT | 44 stands + flags $\longrightarrow$ FM garage |
+| *Sat, Oct 19* | evening | SPRINT | SPRINT units + vest $\longrightarrow$ FM garage |
+| *Sun, Oct 20* | early morning | FM garage | LONG units + vest $\longrightarrow$ Fedor |
+| *Sun, Oct 20* | afternoon | LONG | 28 stands + flags $\longrightarrow$ FM garage |
+| *Sun, Oct 20* | afternoon | LONG | LONG units + vest $\longrightarrow$ FM garage |
+| *Sun, Oct 20* | evening | FM garage | 143 stands + flags $\longrightarrow$ OACT shed |
+
 (setting:hard_ground)=
 ## Putting control stands into the hard ground
 
