Course setters update

--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -52,7 +52,7 @@ All course-setting gear
 | *Thur, Oct 17* | morning | Shed | ? Units 190-197 $\longrightarrow$ Cath for SPRINT |
 | *Thur, Oct 17* | morning | Shed | 39 stands + flags $\longrightarrow$ Michael for MIDDLE |
 | *Thur, Oct 17* | morning | Shed | MIDDLE units + vest $\longrightarrow$ Michael |
-| | | | 143 - (38+20+44+39) = 2 stands remain in the Shed<br/>But some may be in repair<br/>Plus meshO has about 10 stands |
+| | | | 143 - (38+20+44+39) = 2 stands remain in the Shed<br/>All repairs will be complete<br/>Plus meshO has about 5 stands |
 | *Thur, Oct 17* | evening | WARMUP | Units 205-224 $\longrightarrow$ Cath for SPRINT |
 | *Thur, Oct 17* | evening | WARMUP | 20 stands + flags $\longrightarrow$ Fedor for LONG |
 | *Thur, Oct 17* | evening | Shed, meshO | 2 stands + flags $\longrightarrow$ Fedor for LONG |
