--- a/04.computers.md
+++ b/04.computers.md
@@ -34,6 +34,9 @@ Fixed IP addresses:
 - Power over Ethernet (PoE) injector with power adapter
 - IP ?
 
+- SSID `MTBO`
+- WPA2-PSK `I<3mtbo!`
+
 ### Computers setup
 
 **SPRINT "Download server" laptop**
