--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -7,7 +7,7 @@
 |-|-:|:-:|-|
 | OACT | 31-70 | 40-1 | #70 bad battery |
 | OA | 71-109 | 39 | |
-| ONSW | 190-203<br/>205-224<br/>300-304 | 39 | |
+| ONSW | 190-203<br/>205-224<br/>300-304 | 39 | 200 battery invalid,<br/>202 damaged screen|
 
 
 **Allocation to events**
