--- a/02.people.md
+++ b/02.people.md
@@ -196,27 +196,25 @@ We will be thankful even if you can help during one day, or just some hours.
 
 | Name | Role | When |
 |:-|-:|-:|
-| Axel Roberts | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
-| Andrew Cheffers | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| Axel Roberts | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| Andrew Cheffers | Head parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
 | Frank Ingwersen | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
-| Andrew Cheffers | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| Andrew Cheffers | Head parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | David Poland | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Bruce Bowen | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Liz Abott | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Andrew Cumming Thom | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Frank Ingwersen | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Ari Piiroinen | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
-| ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
 | David Poland | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
-| Andrew Cumming Thom | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
-| Frank Ingwersen | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
-| Nicole Thomas | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
-| Mary Ann Kulh | Traffic marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
-| ? | Finish marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
+| Andrew Cumming Thom | Head parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
+| Frank Ingwersen | Traffic marshal,<br/>location 1 | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
+| Mary Ann Kulh | Traffic marshal,<br/>location 1, then 2 | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
+| Nicole Thomas | Traffic marshal,<br/>location 3 | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
 | Bruce Bowen | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
-| Andrew Cumming Thom | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
+| Andrew Cumming Thom | Head parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
-| Andrew Cumming Thom | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| Andrew Cumming Thom | Head parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Ronaldo Santos | Gate marshal | LONG, Oct 20, Sunday 7:30 - 16:00 |
 
 :::{admonition} Call for volunteers
