--- a/02.people.md
+++ b/02.people.md
@@ -143,6 +143,14 @@ This pages lists functions and names of all the volunteers who running the Carni
   - help with fitting the map board
 - pass information on entry-on-the-day competitors to the `IT team`
 
+```{button-link} _static/lists/hires_paid_eventor.pdf
+:color: primary
+:outline:
+
+List of all hires from Eventor (pdf)
+
+```
+
 | Name | Role | When |
 |:-|-:|-:|
 | Sandra Hogg | Registration | all events |
