--- a/04.computers.md
+++ b/04.computers.md
@@ -20,20 +20,16 @@ This page contains the information for the **IT team**.
 
 **Router NETGEAR AC1200**
 
-Internal admin panel
 - IP `192.168.0.1`
 - user `admin`
-- pass `1111` 
-
-Fixed IP addresses:
-- `192.168.0.10` - SPRINT "Download server" laptop
+- pass `1111`
+- WiFi is disabled
 
 **Access point**
 
 - To be fixed to the tent pole
 - Power over Ethernet (PoE) injector with power adapter
-- IP ?
-
+- DHCP assigned IP
 - SSID `MTBO`
 - WPA2-PSK `I<3mtbo!`
 
@@ -41,6 +37,7 @@ Fixed IP addresses:
 
 **SPRINT "Download server" laptop**
 
+- Fixed IP `192.168.0.10`
 - MeOS in network mode
 - MySQL database
   * Address: `192.168.0.10:3306`
@@ -50,7 +47,7 @@ Fixed IP addresses:
 - oScreen parser-and-server (see setup below)
 - serial monitor for meshO diagnostics log (see setup below)
 
-> TODO: Upload competition to the MySQL database beforehand
+> TODO: Upload competition to the MySQL database
 
 **OACT21 "Enquiries" laptop**
 
@@ -67,7 +64,6 @@ Fixed IP addresses:
 - MeOS in network mode
 - Connect to MySQL database on the SPRINT "Download server" laptop
 - Announcer screen in MeOS
-
 
 ### oScreen setup
 
@@ -103,6 +99,62 @@ Online results are to be set up on OACT21 "Enquiries" laptop.
 
 - In addition, a separate meshO Diagnostics unit can be connected to a separate laptop where Digi XCTU software can be used to diagnose the mesh network
 - Tate will run these diagnostics
+
+## Rented SI-Air sticks numbers
+
+**From Orienteering ACT**
+
+`8581175` `8581176` `8581177` `8581178` `8581179` `8581180` `8581181` `8581182` `8581183` 
+`8581184` `8581185` `8581186` `8581187` `8581188` `8581189` `8581190` `8581191` `8581192` 
+`8581193` `8581194` `8625439` `8633229` `8635973` `8635984` `8636015` `8636023` `8643872` 
+`8643888` `8643903` `8643912` `8652477` `8652481` `8652483` 
+
+```{button-link} _static/lists/rented_sticks_oact.csv
+:color: primary
+:outline:
+
+csv file
+```
+
+**From Orienteering Australia**
+
+`8237655` `8237674` `8237688` `8516219` `8516246` 
+
+```{button-link} _static/lists/rented_sticks_oa.csv
+:color: primary
+:outline:
+
+csv file
+```
+
+**From Craig Steffens**
+
+`8510855` `8510856` `8510857` `8510858` `8510859` `8510860` `8510861` `8510862` `8510863` 
+`8511702` `8511703` `8511705` `8511706` `8511715` `8512539` `8512543` `8512545` `8512546` 
+`8512547` `8512549` 
+
+```{button-link} _static/lists/rented_sticks_oqld.csv
+:color: primary
+:outline:
+
+csv file
+```
+
+**From Colin Price**
+
+`8627351` `8635903` `8635904` `8635907` `8635933` `8635936` `8635945` `8635948` `8635950` 
+`8635951` `8635957` `8635958` `8635959` `8635965` `8635966` `8635975` `8635993` `8635996` 
+`8636014` `8636020` `8636022` `8636027` `8636032` `8636036` `8636038` `8636039` `8636042` 
+`8636045` `8636047` `8636567` `8639403` `8639405` `8639407` `8639414` `8639416` `8639417` 
+`8639418` `8639420` `8639421` `8639423` `8639425` `8639426` `8639430` `8639432` `8639433` 
+`8639436` `8639439` `8639440` `8639441` `8639442` `8639446` `8639448` `8639449` `8652453` 
+
+```{button-link} _static/lists/rented_sticks_colin_price.csv
+:color: primary
+:outline:
+
+csv file
+```
 
 ## meshO radio controls setup
 
