Yellow cards updates

--- a/04.computers.md
+++ b/04.computers.md
@@ -156,6 +156,30 @@ csv file
 csv file
 ```
 
+## Knows changes to be made in MeOS event data
+
+| Competitor | Class | Change |
+|:-|:-:|:-|
+| Niki Hale | W50 | LONG: W50 --> Score |
+| Peter Mitches | M50 | M50 --> M40 |
+| Ken Young | | not hired SIAC --> `8524589` |
+| Skelton, Andrew | | SIAC --> `8011658` |
+| Pat Kham... Phet | | SIAC --> `8512539` |
+| Thomas Carrol | | hired SIAC --> `8510856` |
+| Jason Rutkowski | | SIAC --> `8510862` |
+| Garrick Larkin | | SIAC --> `8512546` |
+| Sue Duckett | | SIAC --> `8511702` |
+| Nicholas Hall | | SIAC --> `8523580` |
+| Arlo Axlee | | SIAC --> `8523600` |
+| Bandi, Narasimha Rao | | SIAC --> `8512545` |
+
+People who were absent in Eventor on WarmUp (and had unknown SIAC numbers):
+- Mortimer, Anne, W60
+- Metherell, Alister, M60
+- Greg Barbour, M50
+- Pyatt, Steve, M60
+
+
 ## meshO radio controls setup
 
 #### WARM-UP
