--- a/04.computers.md
+++ b/04.computers.md
@@ -173,57 +173,26 @@ csv file
 | Arlo Axlee | | SIAC --> `8523600` |
 | Bandi, Narasimha Rao | | SIAC --> `8512545` |
 
+| Stephanie Farrant | W40 | Club --> Peninsula and Plains |
+| Timothy Farrant | M21 | Club --> Peninsula and Plains |
+| Nicola Mitchell | W50 | --> Hutt Valley |
+| Peter Mitchell | M40 | Club --> Hutt Valley |
+| Liam Drew | M40 | Club --> Hutt Valley |
+| Andrew McNeill | M60 | Club --> Taranaki |
+| Jason Rutkowski | M21 | Club --> CAS N |
+| Lucy Mackie | W21 | Club --> CAS N |
+| Tomas Krajca | M21 | Club --> CAS A |
+| David Simpfendorfer | M50 | Club --> CAS A |
+| Trevor Jacobs | M70 | Club --> CAS A |
+| Murray Withers | M60 | Club --> ? |
+| Karena Hanley | W60 | Club --> ? |
+| Duncan Ledger | M21 | Club --> ? |
+
+> TODO: Find the missing clubs
+
 People who were absent in Eventor on WarmUp (and had unknown SIAC numbers):
 - Mortimer, Anne, W60
 - Metherell, Alister, M60
 - Greg Barbour, M50
 - Pyatt, Steve, M60
 
-
-## meshO radio controls setup
-
-#### WARM-UP
-
-Warm-up event has one common score course: we will have radios only on start and finish.  
-Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
-
-- 2x meshO Controls
-- 2x meshO Boost
-- 8m mast at the IT tent
-
-![](_static/mesho/arena_warmup.png)
-
-#### MASS
-
-- 5x meshO Controls
-- 2x meshO Boost
-- 8m mast at the IT tent
-- 3m mast to relay the signal over the crest of the hill
-
-![](_static/mesho/radio_mass.png)
-
-#### MIDDLE
-
-- 5x meshO Controls
-- 4x meshO Boost
-- 3x 8m masts on the hills
- - 3x 3m masts at IT tent, start 1 and start 2
-
-![](_static/mesho/radio_test_middle.jpeg)
-
-#### SPRINT
-
-- 8x meshO Controls
-- 2x meshO Boost
-- 2x 8m masts at the IT tent and the hill
-
-![](_static/mesho/radio_sprint.png)
-
-#### LONG
-
-- 6x meshO Controls
-- 3x meshO Boost
-- 2x 8m masts at the IT tent and the hill
-- 3m mast at the old water tower
-
-![](_static/mesho/radio_long.png)
