--- a/04.computers.md
+++ b/04.computers.md
@@ -156,7 +156,7 @@ csv file
 csv file
 ```
 
-## Knows changes to be made in MeOS event data
+## Known changes to be made in MeOS event data
 
 | Competitor | Class | Change |
 |:-|:-:|:-|
