IT setup update

--- a/04.computers.md
+++ b/04.computers.md
@@ -79,8 +79,9 @@ Online results are to be set up on OACT21 "Enquiries" laptop.
 
 - Start `Online Results` service in MeOS
 - Run every 15 sec
-- Check
-- 
+- Dropdown: `MeOS Online Protocol XML 2.0`
+- Check `Compress large files` and `Send to the web URL` and nothing else
+- Fill out competition ID and Password
 - URL `https://www.melin.nu/online/emma/emmaupdate.php`
 - Competition IDs:
   * Warm-up: 31547
