Update to IT pages

--- a/04.computers.md
+++ b/04.computers.md
@@ -172,22 +172,39 @@ csv file
 | Sue Duckett | | SIAC --> `8511702` |
 | Nicholas Hall | | SIAC --> `8523580` |
 | Arlo Axlee | | SIAC --> `8523600` |
-| Bandi, Narasimha Rao | | SIAC --> `8512545` |
+| Narasimha Rao Bandi | | SIAC --> `8512545` |
+| Tom Lothian | | SIAC --> `8026652` |
+| Ben Coetzer | | SIAC --> `8052741` |
+| Lucy Mackie | | SIAC --> `8511715` |
 
-| Stephanie Farrant | W40 | Club --> Peninsula and Plains |
-| Timothy Farrant | M21 | Club --> Peninsula and Plains |
-| Nicola Mitchell | W50 | --> Hutt Valley |
-| Peter Mitchell | M40 | Club --> Hutt Valley |
-| Liam Drew | M40 | Club --> Hutt Valley |
+### Club updates for ANZ challenge
+
+| Competitor | Class | Change |
+|:-|:-:|:-|
 | Andrew McNeill | M60 | Club --> Taranaki |
-| Jason Rutkowski | M21 | Club --> CAS N |
-| Lucy Mackie | W21 | Club --> CAS N |
-| Tomas Krajca | M21 | Club --> CAS A |
 | David Simpfendorfer | M50 | Club --> CAS A |
-| Trevor Jacobs | M70 | Club --> CAS A |
-| Murray Withers | M60 | Club --> ? |
-| Karena Hanley | W60 | Club --> ? |
 | Duncan Ledger | M21 | Club --> ? |
+| Jason Brown | M21 | Club --> ? |
+| Jason Rutkowski | M21 | Club --> CAS N |
+| Garrick Larkin | M40 | Club --> ? |
+| Karena Hanley | W60 | Club --> ? |
+| Kieth Dawson | M60 | Club --> ? |
+| Liam Drew | M40 | Club --> Hutt Valley |
+| Lucy Mackie | W21 | Club --> CAS N |
+| Leeannne Mason | W-Ebike | Club --> ? |
+| Murray Withers | M60 | Club --> ? |
+| Nicola Mitchell | W50 | Club --> Hutt Valley |
+| Niki Hale | W50 | Club --> ? |
+| Peter Mitchell | M40 | Club --> Hutt Valley |
+| Phil White | M60 | Club --> Taupo |
+| Seb Dunne | M21 | Club --> CAS A |
+| Stephanie Farrant | W40 | Club --> Peninsula and Plains |
+| Sue Duckett | W50 | Club --> ? |
+| Timothy Farrant | M21 | Club --> Peninsula and Plains |
+| Tomas Krajca | M21 | Club --> CAS A |
+| Trevor Jacobs | M70 | Club --> CAS A |
+
+
 
 > TODO: Find the missing clubs
 
