--- a/04.mesho.md
+++ b/04.mesho.md
@@ -1,6 +1,6 @@
 # 📡 meshO radio controls setup
 
-#### WARM-UP
+## WARM-UP
 
 Warm-up event has one common score course: we will have radios only on start and finish.  
 Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
@@ -11,7 +11,7 @@ Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
 
 ![](_static/mesho/arena_warmup.png)
 
-#### MASS
+## MASS
 
 - 5x meshO Controls
 - 2x meshO Boost
@@ -20,7 +20,21 @@ Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
 
 ![](_static/mesho/radio_mass.png)
 
-#### MIDDLE
+### Actual allocation for MASS
+
+![](_static/mesho/whatsapp_mass1.jpeg)
+
+![](_static/mesho/whatsapp_mass2.jpeg)
+
+Ctl #2 is the Finish, close to the tent
+
+Ctl #44 is actually #300 (known meshO bug that I need to fix… I’m only looking at the 2nd byte atm). It was over the rise, so makes sense that signal wasn’t great to Prime.
+
+#111 was over a bit of a rise, explaining the medium signal to #300, but quite close to #84 up the gully on the road bend.
+
+#106 was at the top track junction, only just a bit further away from #300 than #83, but with a big spur in the way.
+
+## MIDDLE
 
 - 5x meshO Controls
 - 4x meshO Boost
@@ -29,7 +43,7 @@ Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
 
 ![](_static/mesho/radio_test_middle.jpeg)
 
-#### SPRINT
+## SPRINT
 
 - 8x meshO Controls
 - 2x meshO Boost
@@ -37,7 +51,7 @@ Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
 
 ![](_static/mesho/radio_sprint.png)
 
-#### LONG
+## LONG
 
 - 6x meshO Controls
 - 3x meshO Boost
