Updates to updates

--- a/04.computers.md
+++ b/04.computers.md
@@ -165,7 +165,7 @@ csv file
 | Peter Mitches | M50 | M50 --> M40 |
 | Ken Young | | not hired SIAC --> `8524589` |
 | Skelton, Andrew | | SIAC --> `8011658` |
-| Pat Kham... Phet | | SIAC --> `8512539` |
+| Pat Khamphengphet | | SIAC --> `8512539` |
 | Thomas Carrol | | hired SIAC --> `8510856` |
 | Jason Rutkowski | | SIAC --> `8510862` |
 | Garrick Larkin | | SIAC --> `8512546` |
@@ -184,7 +184,7 @@ csv file
 | Andrew McNeill | M60 | Club --> Taranaki |
 | David Simpfendorfer | M50 | Club --> CAS A |
 | Duncan Ledger | M21 | Club --> ? |
-| Jason Brown | M21 | Club --> ? |
+| Jason Brown | M21 | Club --> Peninsula and Plains |
 | Jason Rutkowski | M21 | Club --> CAS N |
 | Garrick Larkin | M40 | Club --> ? |
 | Karena Hanley | W60 | Club --> ? |
