Update to the updates

--- a/04.computers.md
+++ b/04.computers.md
@@ -186,19 +186,17 @@ csv file
 | Jason Brown | M21 | Club --> Peninsula and Plains |
 | Jason Rutkowski | M21 | Club --> CAS N |
 | Garrick Larkin | M40 | Club --> ? |
-| Karena Hanley | W60 | Club --> ? |
-| Kieth Dawson | M60 | Club --> ? |
 | Liam Drew | M40 | Club --> Hutt Valley |
 | Lucy Mackie | W21 | Club --> CAS N |
 | Leeannne Mason | W-Ebike | Club --> ? |
-| Murray Withers | M60 | Club --> ? |
+| Murray Withers | M60 | Club --> CAS A |
 | Nicola Mitchell | W50 | Club --> Hutt Valley |
 | Niki Hale | W50 | Club --> ? |
 | Peter Mitchell | M40 | Club --> Hutt Valley |
 | Phil White | M60 | Club --> Taupo |
 | Seb Dunne | M21 | Club --> CAS A |
 | Stephanie Farrant | W40 | Club --> Peninsula and Plains |
-| Sue Duckett | W50 | Club --> ? |
+| Sue Duckett | W50 | Club --> CAS A |
 | Timothy Farrant | M21 | Club --> Peninsula and Plains |
 | Tomas Krajca | M21 | Club --> CAS A |
 | Trevor Jacobs | M70 | Club --> CAS A |
