--- a/04.computers.md
+++ b/04.computers.md
@@ -159,22 +159,16 @@ csv file
 
 ## Known changes to be made in MeOS event data
 
-| Competitor | Class | Change |
+| Competitor | Class | Change | Done? |
 |:-|:-:|:-|
-| Niki Hale | W50 | LONG: W50 --> Score |
-| Peter Mitches | M50 | M50 --> M40 |
-| Ken Young | | not hired SIAC --> `8524589` |
-| Skelton, Andrew | | SIAC --> `8011658` |
-| Pat Khamphengphet | | SIAC --> `8512539` |
-| Thomas Carrol | | hired SIAC --> `8510856` |
-| Jason Rutkowski | | SIAC --> `8510862` |
-| Garrick Larkin | | SIAC --> `8512546` |
-| Sue Duckett | | SIAC --> `8511702` |
-| Nicholas Hall | | SIAC --> `8523580` |
-| Arlo Axlee | | SIAC --> `8523600` |
-| Narasimha Rao Bandi | | SIAC --> `8512545` |
-| Tom Lothian | | SIAC --> `8026652` |
-| Lucy Mackie | | SIAC --> `8511715` |
+| Niki Hale | W50 | LONG: W50 --> Score | done |
+| Peter Mitches | M50 | M50 --> M40 | done |
+| Ken Young | | not hired SIAC --> `8524589` | done |
+| Skelton, Andrew | | SIAC --> `8011658` | |
+| Thomas Carrol | | hired SIAC --> `8510856` | done |
+| Garrick Larkin | | SIAC --> `8512546` | done |
+| Narasimha Rao Bandi | | SIAC --> `8512545` | done |
+| Tom Lothian | | SIAC --> `8026652` | |
 
 ### Club updates for ANZ challenge
 
